# spotify-rust-hackathon

./: .gitignore  README.md  WORKSHOP_OVERVIEW.md
hackathon-starter/src/: main.rs
rust-nation/: Cargo.toml
rust-nation/src/: app.rs  main.rs
spotify-artist-data-hackathon-solution/: Cargo.toml
spotify-artist-data-hackathon-solution/src/: main.rs  scratch.rs
spotify-artist-data-hackathon-starter/: Cargo.toml
spotify-artist-data-hackathon-starter/src/: main.rs
spotify-artist-data/src/: main.rs
spotify-hackathon-template/: Cargo.toml
spotify-hackathon-template/src/: auth.rs  main.rs
workshop-part-one/: README.md
workshop-part-one/spotify-hackathon-template/: RUST_ERRORS_TEACHING_GUIDE.md
workshop-part-one/spotify-hackathon-template/src/: main.rs
workshop-part-two/: README.md
workshop-part-two/spotify-hackathon-solution/: Cargo.toml
workshop-part-two/spotify-hackathon-solution/src/: auth.rs  main.rs
