[package]
name = "spotify-hackathon-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
webbrowser = "0.8"
dotenv = "0.15"
url = "2.2.2"
urlencoding = "2.1.0"
dialoguer = "0.10"
openai = { version = "1.0.0-alpha.16" }
